# steam-acc-switcher

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml
sas/: __init__.py  __main__.py  accounts.py  cli.py  commands.py  console.py  errors.py  install.py  nicknames.py  steam.py  ui.py  vdf_utils.py
